[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pomodoro"
version = "0.0.1"
authors = [
  { name="Ankit Chandawala", email="ankitchandawala@gmail.com" },
]
description = "Command line Pomodoro timer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nerandell/pomodoro"
"Bug Tracker" = "https://github.com/nerandell/pomodoro/issues"